--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -696,9 +696,21 @@ De med en kortare vistelsetid i Sverige på 0–2 år var de som flyttade i stö
 
 *Kolla SCBs Integrations-del i statistikdatabasen*
 
-Det finns ett hämta_data-skript som bland annat har data för valdeltagande uppdelat på vistelsetid (över under 10 år) och utrikes/inrikes födda. /Jon 
-
 *Valdeltagande*
+
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_valdeltagande_vistelsetid$Valdeltagande_i_val_till_riksdag
+```
+
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_valdeltagande_vistelsetid$Valdeltagande_i_val_till_region
+
+```
+
+```{r, echo=FALSE, fig.height=5, fig.width=10, fig.align='center', fig.cap="."}
+gg_valdeltagande_vistelsetid$Valdeltagande_i_val_till_kommun
+
+```
 
 *SoM-institutets tillitsmätningar*
 
