--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -250,7 +250,7 @@ gg_antal_utrikes$befolkningsprognos_lan_Dalarna
 
 ```
 
-Enligt *SCB:s* befolkningsprognos förväntas antalet utrikes födda i Dalarnas län mellan 16–64 år att öka med `r kumulativ_summa_utrikes_max_prognos` personer mellan `r min_ar_utrikes_kumulativ_prognos` och `r max_ar_utrikes_kumulativ_prognos`, medan antalet inrikes födda personer i länet förväntas att minska med `r kumulativ_summa_inrikes_max_prognos` personer, enligt prognosen. Antalet personer mellan 16 och 64 år kommer således att minska i Dalarna fram till `r max_ar_utrikes_kumulativ_prognos` , vilket kan bli problematiskt för länets kompetensförsörjning.
+Enligt *SCB:s* befolkningsprognos från juni 2024 förväntas antalet utrikes födda i Dalarnas län mellan 16–64 år att `r ifelse(kumulativ_summa_utrikes_max_prognos>0,"öka","minska")` med `r kumulativ_summa_utrikes_max_prognos_abs` personer mellan `r min_ar_utrikes_kumulativ_prognos` och `r max_ar_utrikes_kumulativ_prognos`, medan antalet inrikes födda personer i länet förväntas att `r ifelse(kumulativ_summa_inrikes_max_prognos>0,"öka","minska")` med `r kumulativ_summa_inrikes_max_prognos_abs` personer. Enligt prognosen kommer antalet personer mellan 16 och 64 år således att minska tydligt i Dalarna fram till `r max_ar_utrikes_kumulativ_prognos` , vilket kan bli problematiskt för bland annat länets kompetensförsörjning.
 
 Enligt *Arbetsförmedlingen* är det extra viktigt för små kommuner att ta vara på den resurs som utrikesfödda kan utgöra, annars riskerar de att få mycket svårt med arbetskraftsförsörjningen.
 Arbetsförmedlingen betonar möjligheterna med att använda den arbetskraftsreserv som de utrikes födda
